Spacing fixes on poll options.

--- a/app/assets/stylesheets/components/_polls.scss
+++ b/app/assets/stylesheets/components/_polls.scss
@@ -219,9 +219,13 @@
     position: absolute;
     width: 90%;
   }
+
+  span {
+    margin-left: 10px;
+  }
 }
 
-.poll__options__option p {
+.option-text--hidden {
   @include screenreader;
 }
 
